--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     
     <section class="menu-bar" style="background-image: url('assets/images/header/header-bg.png')">
       <div class="menu-bar__title">
-        <img src="assets/images/title/menu.svg" alt="menu">
+        <img src="assets/images/title/menu.png" alt="menu">
       </div>
     
       <div class="menu-bar__food container">
