--- a/index.html
+++ b/index.html
@@ -2963,7 +2963,7 @@
           <input class="modal-form__i-name" type="text" name="name" placeholder="Ваше имя">
           <input class="modal-form__i-tel" type="tel" name="tel" placeholder="+7(" onkeyup="this.value = this.value.replace(/[A-Za-zА-Яа-яЁё]/, '');">
           <div class="modal-form__date">
-            <input class="modal-form__i-date" id="date" type="date" name="date" value="">
+            <input class="modal-form__i-date" id="date" type="date" name="date" value="" placeholder="дд.мм.гг">
           </div>
   
           <div class="modal-form__drop dropdown">
