--- a/index.html
+++ b/index.html
@@ -2962,7 +2962,7 @@
           <input class="modal-form__i-name" type="text" name="name" placeholder="Ваше имя">
           <input class="modal-form__i-tel" type="tel" name="tel" placeholder="+7(" onkeyup="this.value = this.value.replace(/[A-Za-zА-Яа-яЁё]/, '');">
           <div class="modal-form__date">
-            <input class="modal-form__i-date" min="2024-01-01" max="2024-12-31" id="date" type="date" name="date" value="" placeholder="дд.мм.гг">
+            <input class="modal-form__i-date" min="2024-01-01" id="dateInput" type="date" name="date" value="">
           </div>
   
           <div class="modal-form__drop dropdown">
