--- a/index.html
+++ b/index.html
@@ -60,16 +60,13 @@
           </div>
   
           <video class="video-smoke-tab video-smoke">
-            <source src="assets/video/tab.mp4" type="video/mp4">
+            <source src="assets/video/tab.mp4" playsinline muted type="video/mp4">
          </video>
     
          <video class="video-smoke-mob video-smoke" >
-          <source src="assets/video/mob.mp4" type="video/mp4">
+          <source src="assets/video/mob.mp4" playsinline muted type="video/mp4">
        </video>
          </div>
-  
-  
-  
       </div>
   
   
