--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
             <a href="#" class="header__banner-network-el"><img src="assets/images/icon/inst.png" alt="inst"></a>
           </div>
   
-          <video class="video-smoke-tab video-smoke">
-            <source src="assets/video/tab.mp4" playsinline muted type="video/mp4">
+          <video class="video-smoke-tab video-smoke"  playsinline muted >
+            <source src="assets/video/tab.mp4" type="video/mp4">
          </video>
     
-         <video class="video-smoke-mob video-smoke" >
-          <source src="assets/video/mob.mp4" playsinline muted type="video/mp4">
+         <video class="video-smoke-mob video-smoke" playsinline muted>
+          <source src="assets/video/mob.mp4"  type="video/mp4">
        </video>
          </div>
       </div>
