--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <body class="device-m">
-  <!-- <div id="preloader" style="display: none;"></div> -->
+  <div id="preloader" style="display: none;"></div>
 
   <header class="fixed-top">
     <nav class="navbar navbar-default navbar-fixed-top over">
